# TEMP_ProblemA

./: .gitignore  ProblemA.py  README.md  check_user_behavior.py  main.py  pyproject.toml  run_detailed_simulation.py
Documents/: .gitignore  Model-1-Final.md  Parameters.md
mp_shm_x2/: battery.py  config.py  power.py  simulation.py  stochastic.py  thermal.py  user_config.py
tests/: test_battery.py  test_power.py  test_simulation.py  test_stochastic_validation.py  test_thermal.py
